--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: BoundaryStats
 Type: Package
-Title: Calculation of Boundary Overlap Statistics
+Title: Boundary Overlap Statistics
 Version: 2.0.0
 Author: Amy Luo
 Maintainer: Amy Luo <aluo@vols.utk.edu>
-Description: Functions to calculate boundary and boundary overlap statistics for
-    two spatially distributed traits using raster data. If data are trait values,
-    trait data are transformed to boundary intensities based on approximate first
-    derivatives across latitude and longitude. The package can conduct statistical
-    boundary and boundary overlap tests and produce null distributions for those
-    tests using the input data.
+Author@R: c(
+  person(given = 'Amy',
+        family = 'Luo',
+        role = c('aut', 'cre', 'cph'),
+        email = 'aluo@vols.utk.edu'
+        comment = c(ORCID = '0000-0002-9197-4673'))
+  person(given = 'Elizabeth',
+        family = 'Derryberry',
+        role = 'ths'
+        comment = c(ORCID = '0000-0002-8248-9748'))
+  )
+Description: Analysis workflow for finding geographic boundaries of ecological or landscape traits and comparing the placement of geographic boundaries of two traits. If data are trait values, trait data are transformed to boundary intensities based on approximate first derivatives across latitude and longitude. The package includes functions to create custom null models based on the input data.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
