--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,19 @@
 Package: BoundaryStats
 Type: Package
 Title: Boundary Overlap Statistics
-Version: 2.0.0
-Author: Amy Luo
-Maintainer: Amy Luo <aluo@vols.utk.edu>
-Author@R: c(
+Version: 2.0.1
+Authors@R: c(
   person(given = 'Amy',
         family = 'Luo',
         role = c('aut', 'cre', 'cph'),
-        email = 'aluo@vols.utk.edu'
-        comment = c(ORCID = '0000-0002-9197-4673'))
+        email = 'aluo@vols.utk.edu',
+        comment = c(ORCID = '0000-0002-9197-4673')),
   person(given = 'Elizabeth',
         family = 'Derryberry',
-        role = 'ths'
+        role = 'ths',
         comment = c(ORCID = '0000-0002-8248-9748'))
   )
-Description: Analysis workflow for finding geographic boundaries of ecological or landscape traits and comparing the placement of geographic boundaries of two traits. If data are trait values, trait data are transformed to boundary intensities based on approximate first derivatives across latitude and longitude. The package includes functions to create custom null models based on the input data.
+Description: Analysis workflow for finding geographic boundaries of ecological or landscape traits and comparing the placement of geographic boundaries of two traits. If data are trait values, trait data are transformed to boundary intensities based on approximate first derivatives across latitude and longitude. The package includes functions to create custom null models based on the input data. The boundary statistics are described in: Fortin, Drapeau, and Jacquez (1996) <doi:10.2307/3545584>.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
