--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BoundaryStats
 Type: Package
 Title: Boundary Overlap Statistics
-Version: 2.1.1
+Version: 2.2.0
 Authors@R: c(
   person(given = 'Amy',
         family = 'Luo',
@@ -24,11 +24,13 @@ Imports:
   methods,
   ggplot2,
   tibble,
+  dplyr,
+  tidyr,
   magrittr,
   igraph,
   fields,
-  rgeoda,
-  scales
+  scales,
+  sfdep
 Depends:
   R (>= 4.1.0)
 Suggests: knitr, rmarkdown
